Lilac: VAF based filtering.