@@ -1,17 +1,17 @@
 package com.hartwig.hmftools.lilac.fragment;
 
-import static java.lang.Math.max;
-
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
 import static com.hartwig.hmftools.lilac.fragment.FragmentScope.BASE_QUAL_FILTERED;
-import static com.hartwig.hmftools.lilac.fragment.FragmentUtils.copyNucleotideFragment;
 
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.NavigableMap;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.google.common.collect.HashMultiset;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
@@ -22,40 +22,44 @@ import com.hartwig.hmftools.lilac.seq.SequenceCount;
 public class AminoAcidFragmentPipeline
 {
     private final LilacConfig mConfig;
-    private final double mMinEvidence;
-    private final double mMinHighQualEvidence;
+
+    private final int mMinEvidenceSupport;
+    private final double mMinEvidenceFactor;
+    private final double mMinHighQualEvidenceFactor;
 
     private final List<Fragment> mHighQualRefAminoAcidFragments; // generated from input ref fragments, filtered and amino acids built
 
     // per-gene counts of bases and amino-acids with sufficient support
-    private final Map<String,SequenceCount> mRefNucleotideCounts;
-    private final Map<String,SequenceCount> mRefAminoAcidCounts;
+    private final Map<String, SequenceCount> mRefNucleotideCounts;
+    private final Map<String, SequenceCount> mRefAminoAcidCounts;
 
     private final List<Fragment> mOriginalRefFragments; // copied and used for phasing only, will remain unchanged
 
-    public AminoAcidFragmentPipeline(final LilacConfig config, final List<Fragment> referenceFragments)
+    public AminoAcidFragmentPipeline(final LilacConfig config, final Collection<Fragment> referenceFragments)
     {
         mConfig = config;
-        mOriginalRefFragments = referenceFragments.stream().map(x -> copyNucleotideFragment(x)).collect(Collectors.toList());
+        mOriginalRefFragments = referenceFragments.stream().map(FragmentUtils::copyNucleotideFragment).collect(Collectors.toList());
 
         mHighQualRefAminoAcidFragments = createHighQualAminoAcidFragments(referenceFragments);
 
         int fragmentCount = mHighQualRefAminoAcidFragments.size();
 
-        mMinEvidence = max(config.MinEvidence, fragmentCount * config.MinNucleotideEvidenceFactor);
-        mMinHighQualEvidence = fragmentCount * config.MinNucleotideHighQualEvidenceFactor;
+        mMinEvidenceSupport = config.MinEvidenceSupport;
+        mMinEvidenceFactor = config.MinEvidenceFactor;
+        mMinHighQualEvidenceFactor = config.MinHighQualEvidenceFactor;
 
         mRefNucleotideCounts = Maps.newHashMap();
         mRefAminoAcidCounts = Maps.newHashMap();
     }
 
     public List<Fragment> highQualRefFragments() { return mHighQualRefAminoAcidFragments; }
-    public double minEvidence() { return mMinEvidence; }
-    public double minHighQualEvidence() { return mMinHighQualEvidence; }
+    public int minEvidenceSupport() { return mMinEvidenceSupport; }
+    public double minEvidenceFactor() { return mMinEvidenceFactor; }
+    public double minHighQualEvidenceFactor() { return mMinHighQualEvidenceFactor; }
 
-    public Map<String,SequenceCount> getReferenceAminoAcidCounts() { return mRefAminoAcidCounts; }
+    public Map<String, SequenceCount> getReferenceAminoAcidCounts() { return mRefAminoAcidCounts; }
 
-    private List<Fragment> createHighQualAminoAcidFragments(final List<Fragment> fragments)
+    private static List<Fragment> createHighQualAminoAcidFragments(final Iterable<Fragment> fragments)
     {
         List<Fragment> aminoAcidFragments = Lists.newArrayList();
 
@@ -81,30 +85,19 @@ public class AminoAcidFragmentPipeline
         return createSequenceSets(mRefNucleotideCounts);
     }
 
-    private static List<Set<String>> createSequenceSets(final Map<String,SequenceCount> countsMap)
+    private static List<Set<String>> createSequenceSets(final Map<String, SequenceCount> countsMap)
     {
-        List<Set<String>> refAminoAcids = Lists.newArrayList();
-
+        NavigableMap<Integer, Set<String>> refAminoAcids = Maps.newTreeMap();
         for(SequenceCount seqCounts : countsMap.values())
         {
-            for(int locus = 0; locus < seqCounts.getLength(); ++locus)
+            for(int locus : seqCounts.seqCountsByLoci().keySet())
             {
-                Set<String> aminoAcids;
-                if(locus >= refAminoAcids.size())
-                {
-                    aminoAcids = Sets.newHashSet();
-                    refAminoAcids.add(locus, aminoAcids);
-                }
-                else
-                {
-                    aminoAcids = refAminoAcids.get(locus);
-                }
-
-                aminoAcids.addAll(seqCounts.get(locus).keySet());
+                refAminoAcids.computeIfAbsent(locus, l -> Sets.newHashSet());
+                refAminoAcids.get(locus).addAll(seqCounts.seqCountsByLoci().getOrDefault(locus, HashMultiset.create()).elementSet());
             }
         }
 
-        return refAminoAcids;
+        return Lists.newArrayList(refAminoAcids.values());
     }
 
     public List<Fragment> referencePhasingFragments(final HlaContext context)
@@ -116,36 +109,32 @@ public class AminoAcidFragmentPipeline
         String gene = context.geneName();
 
         // start with the unfiltered fragments again
-        List<Fragment> geneRefNucFrags = mOriginalRefFragments.stream()
-                .filter(x -> x.containsGene(gene))
-                .collect(Collectors.toList());
-
+        List<Fragment> geneRefNucFrags = mOriginalRefFragments.stream().filter(x -> x.containsGene(gene)).toList();
         if(geneRefNucFrags.isEmpty())
             return Collections.emptyList();
 
-        List<Fragment> highQualFrags = geneRefNucFrags.stream()
-                .map(x -> copyNucleotideFragment(x))
-                .collect(Collectors.toList());
-
-        highQualFrags.forEach(x -> x.removeLowQualBases());
-        highQualFrags = highQualFrags.stream().filter(x -> x.hasNucleotides()).collect(Collectors.toList());
+        List<Fragment> highQualFrags = geneRefNucFrags.stream().map(FragmentUtils::copyNucleotideFragment).toList();
+        highQualFrags.forEach(Fragment::removeLowQualBases);
+        highQualFrags = highQualFrags.stream().filter(Fragment::hasNucleotides).toList();
 
         List<Fragment> qualEnrichedNucFrags = NucleotideFragmentQualEnrichment.qualityFilterFragments(
-                mMinEvidence, mMinHighQualEvidence, geneRefNucFrags, highQualFrags);
+                mMinEvidenceSupport, mMinEvidenceFactor, mMinHighQualEvidenceFactor, geneRefNucFrags, highQualFrags);
 
         int maxCommonAminoAcidExonBoundary = GENE_CACHE.MaxCommonAminoAcidExonBoundary;
 
         Set<Integer> aminoAcidBoundaries = context.AminoAcidBoundaries.stream()
                 .filter(x -> x <= maxCommonAminoAcidExonBoundary).collect(Collectors.toSet());
 
-        NucleotideSpliceEnrichment spliceEnricher = new NucleotideSpliceEnrichment(mMinEvidence, aminoAcidBoundaries);
+        NucleotideSpliceEnrichment spliceEnricher = new NucleotideSpliceEnrichment(
+		mMinEvidenceSupport, mMinEvidenceFactor, aminoAcidBoundaries);
         List<Fragment> spliceEnrichedNucFrags = spliceEnricher.applySpliceInfo(qualEnrichedNucFrags, highQualFrags);
 
-        List<Fragment> enrichedAminoAcidFrags = AminoAcidQualEnrichment.qualityFilterAminoAcidFragments(mConfig, spliceEnrichedNucFrags, mMinEvidence);
+        List<Fragment> enrichedAminoAcidFrags = AminoAcidQualEnrichment.qualityFilterAminoAcidFragments(
+                mConfig, spliceEnrichedNucFrags, mMinEvidenceSupport, mMinEvidenceFactor);
 
         // cache support at each base and amino acid for later writing and recovery of low-qual support
-        SequenceCount refNucleotideCounts = SequenceCount.nucleotides(mMinEvidence, enrichedAminoAcidFrags);
-        SequenceCount refAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidence, enrichedAminoAcidFrags);
+        SequenceCount refNucleotideCounts = SequenceCount.nucleotides(mMinEvidenceSupport, mMinEvidenceFactor, enrichedAminoAcidFrags);
+        SequenceCount refAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidenceSupport, mMinEvidenceFactor, enrichedAminoAcidFrags);
         setCounts(gene, refNucleotideCounts, refAminoAcidCounts);
 
         return enrichedAminoAcidFrags;
@@ -157,18 +146,18 @@ public class AminoAcidFragmentPipeline
         mRefAminoAcidCounts.put(gene, refAminoAcidCounts);
     }
 
-    public List<Fragment> calcComparisonCoverageFragments(final List<Fragment> comparisonFragments)
+    public List<Fragment> calcComparisonCoverageFragments(final Iterable<Fragment> comparisonFragments)
     {
         List<Fragment> highQualFragments = createHighQualAminoAcidFragments(comparisonFragments);
 
         if(highQualFragments.isEmpty())
             return Lists.newArrayList();
 
-        SequenceCount referenceNucleotideCounts = SequenceCount.nucleotides(mMinEvidence, mHighQualRefAminoAcidFragments);
-        SequenceCount referenceAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidence, mHighQualRefAminoAcidFragments);
+        SequenceCount referenceNucleotideCounts = SequenceCount.nucleotides(mMinEvidenceSupport, mMinEvidenceFactor, mHighQualRefAminoAcidFragments);
+        SequenceCount referenceAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidenceSupport, mMinEvidenceFactor, mHighQualRefAminoAcidFragments);
 
-        SequenceCount tumorNucleotideCounts = SequenceCount.nucleotides(mMinEvidence, highQualFragments);
-        SequenceCount tumorAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidence, highQualFragments);
+        SequenceCount tumorNucleotideCounts = SequenceCount.nucleotides(mMinEvidenceSupport, mMinEvidenceFactor, highQualFragments);
+        SequenceCount tumorAminoAcidCounts = SequenceCount.aminoAcids(mMinEvidenceSupport, mMinEvidenceFactor, highQualFragments);
 
         final List<SequenceCountDiff> nucleotideDifferences = SequenceCountDiff.create(referenceNucleotideCounts, tumorNucleotideCounts)
                 .stream().filter(x -> x.TumorCount > 0).collect(Collectors.toList());
@@ -182,32 +171,32 @@ public class AminoAcidFragmentPipeline
         return variantFilteredTumorAminoAcids;
     }
 
-    private static boolean containsVariant(
-            final Fragment fragment, final List<SequenceCountDiff> nucelotideVariants, final List<SequenceCountDiff> aminoAcidVariants)
+    private static boolean containsVariant(final Fragment fragment, final Collection<SequenceCountDiff> nucelotideVariants,
+            final Collection<SequenceCountDiff> aminoAcidVariants)
     {
         return nucelotideVariants.stream().anyMatch(x -> containsNucleotideVariant(fragment, x))
                 || aminoAcidVariants.stream().anyMatch(x -> containsAminoAcidVariant(fragment, x));
     }
 
-    private static boolean containsNucleotideVariant(final Fragment fragment, SequenceCountDiff variant)
+    private static boolean containsNucleotideVariant(final Fragment fragment, final SequenceCountDiff variant)
     {
         return fragment.containsNucleotideLocus(variant.Loci) && fragment.nucleotide(variant.Loci).equals(variant.Sequence);
     }
 
-    private static boolean containsAminoAcidVariant(final Fragment fragment, SequenceCountDiff variant)
+    private static boolean containsAminoAcidVariant(final Fragment fragment, final SequenceCountDiff variant)
     {
         return fragment.containsAminoAcidLocus(variant.Loci) && fragment.aminoAcid(variant.Loci).equals(variant.Sequence);
     }
 
     public void writeCounts(final LilacConfig config)
     {
-        for(Map.Entry<String,SequenceCount> entry : mRefAminoAcidCounts.entrySet())
+        for(Map.Entry<String, SequenceCount> entry : mRefAminoAcidCounts.entrySet())
         {
             String gene = entry.getKey();
             entry.getValue().writeVertically(config.formFileId(gene + ".aminoacids.txt"));
         }
 
-        for(Map.Entry<String,SequenceCount> entry : mRefNucleotideCounts.entrySet())
+        for(Map.Entry<String, SequenceCount> entry : mRefNucleotideCounts.entrySet())
         {
             String gene = entry.getKey();
             entry.getValue().writeVertically(config.formFileId(gene + ".nucleotides.txt"));
